--- a/docs/css/_custom-checkbox.css
+++ b/docs/css/_custom-checkbox.css
@@ -1,5 +1,5 @@
 
 
-.custom-checkbox__input:checked + .custom-checkbox__icon::after {
+/* .custom-checkbox__input:checked + .custom-checkbox__icon::after {
   opacity: 1;
-}
+} */
