--- a/docs/css/_setting.css
+++ b/docs/css/_setting.css
@@ -1,5 +1,5 @@
 
-*
+/* *
 *::before,
 *::after {
   box-sizing: border-box;
@@ -26,4 +26,4 @@
   cursor: pointer;
   background: transparent;
   border: none;
-}
+} */
