--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,217 @@
+:root {
+  --dark-primary: #2A254B;
+ --primary: #4d4e93;
+ --light-grey: rgba(249, 249, 249, 1);
+ --border-grey: #ebe8f4;
+ --border-dark: #cac6da;
+ --white: #fff;
+ --font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+ --gap: 20px;
+ --line-height: 1.5;
+ --font-weight: 400;
+ --container-width: 1280px;
+ --container-offset: 15px;
+ --main-trs: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
+--outline: 2px dashed currentcoolor;
+--outline-offset: 2px;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Montserrat-ExtraBold'),
+   url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
+   url('../fonts/Montserrat-ExtraBold.woff') format('woff');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Montserrat-Bold'),
+   url('../fonts/Montserrat-Bold.woff2') format('woff2'),
+   url('../fonts/Montserrat-Bold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Montserrat-SemiBold'),
+   url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
+   url('../fonts/Montserrat-SemiBold.woff') format('woff');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Montserrat-Medium'),
+   url('../fonts/Montserrat-Medium.woff2') format('woff2'),
+   url('../fonts/Montserrat-Medium.woff') format('woff');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat-Regular'),
+   url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+   url('../fonts/Montserrat-Regular.woff') format('woff');
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Montserrat-ExtraBold'),
+   url('../fonts/Montserrat-ExtraBold.woff2') format('woff2'),
+   url('../fonts/Montserrat-ExtraBold.woff') format('woff');
+  font-display: swap;
+}
+.btn {
+  cursor: pointer;
+ }
+ .burger {
+  position: relative;
+  width: 16px;
+  height: 16px;
+}
+.burger__line {
+  position: absolute;
+  left: 50%;
+  width: 12px;
+  height: 1px;
+  background-color: var(--dark-primary);
+  transform: translateX(-50%);
+}
+.burger__line:first-child {
+  top: 3px;
+}
+.burger__line:nth-child(2) {
+  top: 6px;
+}
+.burger__line:nth-child(3) {
+  top: 9px;
+}
+.burger__line:last-child {
+  top: 12px;
+}
+.header__top {
+  background: #fff;
+}
+.header__container {
+  display: flex;
+}
+.header__top-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__buttons {
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.header__list {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.header__link:focus {
+  outline: none;
+}
+.header__link:focus-visible {
+  outline: var(--outline);
+  outline-offset:var(--outline-offset);
+}
+@media (any-hover: hover) {
+  .header__link:hover {
+    color: var(--dark-primary);
+  }
+}
+.header__link:active {
+  color: var(--dark-primary);
+}
+.header__button:focus {
+  outline: none;
+}
+.header__button:focus-visible {
+  outline: var(--outline);
+  outline-offset:var(--outline-offset);
+}
+@media (any-hover: hover) {
+  .header__button:hover {
+    color: var(--primary);
+  }
+}
+.header__link:active {
+  color: var(--dark-primary);
+}
+.header__link {
+  font-family: var(--font-family);
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+  color: rgba(114, 110, 141, 1);
+  transition: var(--main-trs);
+}
+.header__bottom-container {
+  align-items: center;
+  justify-content: center;
+}
+.header__bottom {
+  padding: 20px 0;
+  background: var(--light-grey);
+}
+a {
+  text-decoration: none;
+}
+.nav__list {
+  display: flex;
+  align-items: center;
+  gap: 44px;
+}
+a {
+  list-style-type: none;
+}
+.nav__link {
+  font-family: var(--font-family);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+  color: rgba(114, 110, 141, 1);
+}
+@media(any-hover: hover) {
+  .nav__link:hover {
+    transition: var(--main-trs);
+    color: var(--dark-primary);
+  }
+}
+.nav__link:focus {
+  outline: none;
+}
+.nav__link:focus-visible {
+  outline: var(--outline);
+  outline-offset:var(--outline-offset);
+}
+/* media******************************************************************* */
+/* media******************************************************************* */
 @media(max-width: 1280px) {
   .hero-inner {
    height: 109px;
@@ -63,6 +277,17 @@
 
 }
 @media(max-width: 768px) {
+  .cart__title-main {
+  margin-top: 36px;
+  margin-bottom: 36px;
+
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 33.6px;
+  text-align: left;
+
+ }
   .cart__bottom-info {
   display: flex;
   flex-direction: column-reverse;
@@ -124,9 +349,9 @@
  .cart__title-main {
   margin-top: 36px;
   margin-bottom: 36px;
-  //styleName: Headings / H3;
+
   font-family: Montserrat;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 400;
   line-height: 33.6px;
   text-align: left;
